playgrounddir = $(pkgdatadir)/playground
playground_DATA = \
	assets/playground/test.html \
	assets/playground/test.min.html \
	assets/playground/speed.html \
	assets/playground/speed.min.html \
	assets/playground/metrics.html \
	assets/playground/metrics.min.html \
	assets/playground/patterns.html \
	assets/playground/patterns.min.html \
	assets/playground/service.html \
	assets/playground/service.min.html \
	assets/playground/plot.html \
	assets/playground/plot.min.html \
	assets/playground/manifest.json \
	assets/playground/hammer.gif \
	assets/playground/po.de.js \
	assets/playground/po.en.js \
	$(NULL)

CLEANFILES += \
	assets/playground/test.min.html \
	assets/playground/speed.min.html \
	assets/playground/metrics.min.html \
	$(NULL)

EXTRA_DIST += \
	$(playground_DATA) \
	$(NULL)
