centosbrandingdir = $(datadir)/cockpit/branding/centos

centosbranding_DATA = \
	branding/centos/branding.css \
	branding/centos/bg-login.jpg \
	branding/centos/brand-large.png \
	branding/centos/brand.png \
	branding/centos/logo.png \
	branding/centos/apple-touch-icon.png \
	branding/centos/favicon.ico \
	$(NULL)
