defaultbrandingdir = $(datadir)/cockpit/branding/default

defaultbranding_DATA = \
	branding/default/branding.css \
	branding/default/bg-login.jpg \
	branding/default/brand-large.png \
	branding/default/brand.png \
	branding/default/logo.png \
	branding/default/apple-touch-icon.png \
	branding/default/favicon.ico \
	$(NULL)
