fedorabrandingdir = $(datadir)/cockpit/branding/fedora

fedorabranding_DATA = \
	branding/fedora/branding.css \
	branding/fedora/bg-login.jpg \
	branding/fedora/brand-large.png \
	branding/fedora/brand.png \
	branding/fedora/logo.png \
	branding/fedora/apple-touch-icon.png \
	branding/fedora/favicon.ico \
	$(NULL)
